Fix #81 ([FR] The 'Unstaking' text is off center.)

--- a/resources/public/css/style.main.less
+++ b/resources/public/css/style.main.less
@@ -909,7 +909,6 @@ nav.subnav {
     .cta-btn {
       font-size: 13px;
       padding: 12px 20px;
-      width: 90px;
       +.cta-btn {
         margin-left: 10px;
       }
